Second paper deliver

--- a/code/TW_interpolation.ipynb
+++ b/code/TW_interpolation.ipynb
@@ -74,19 +74,19 @@
     "`for(int irow=0; irow<256; irow+=16){    \n",
     "    for(int icol=0; icol<256; icol+=16){`\n",
     "    \n",
-    "To increase or decrease the number of pixels analyzed, just change the argument of this loop.\n"
+    "To increase or decrease the number of pixels analyzed, just change the argument of this loop. But be aware that analysing the entire pixel matrix can take a lot of RAM memory and the notebook can crash.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Be patient, depending on the number of pixels this might take a while\n"
+      "BE PATIENT!! Depending on the number of pixels this might take hours!!\n"
      ]
     },
     {
@@ -111,7 +111,7 @@
     "sprintf(myfname,\"../results/htwInterpPix.root\");\n",
     "TFile *outfile = new TFile(myfname, \"RECREATE\");\n",
     "\n",
-    "cout << \"Be patient, depending on the number of pixels this might take a while\" << endl;\n",
+    "cout << \"BE PATIENT!! Depending on the number of pixels this might take hours!!\" << endl;\n",
     "\n",
     "// It can be done for all 256 row and 256 columns of the matrix, just change the loop to irow++/icol++. \n",
     "// Be aware that analyse the entire pixel matrix can take a lot of RAM memory and the notebook can crash\n",
@@ -242,18 +242,6 @@
     "cout << endl << \" All indicated pixels analysed \" << endl;\n",
     "inputfile->Close();\n",
     "outfile->Close();"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If desired, it is possible to open each output histogram individually by openning the file ROOT and using a browser.\n",
-    "\n",
-    "     In the folder with the output file do:\n",
-    "\n",
-    "`$ root htwInterpPix.root\n",
-    "   root [0] new TBrowser`"
    ]
   }
  ],
