--- a/code/paper.ipynb
+++ b/code/paper.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# <center>Timewalk measurements in the VeloPix ASIC</center>\n",
     "\n",
-    "## 1     Introduction\n",
+    "## I.     Introduction\n",
     "\n",
     "During Run I, LHCb ran at a luminosity (number of collisions per $cm^{2}$ and per second) of $\\mathrm{4 \\times 10^{32}} \\mathrm{cm^{-2}}$ $\\mathrm{{s^{-1}}}$ and is expected to increase to $\\mathrm{2 \\times 10^{33}}$ $\\mathrm{m^{-2}s^{-1}}$ The luminosity is restricted by trigger on both hardware and software level and the former VELO has a readout limit of 1 MHz. To run at a higher luminosity, the hardware trigger will be refunded with a full software trigger readout system of 40 MHz. \n",
     "\n",
@@ -14,11 +14,11 @@
     "\n",
     "This study on the timewalk on the VeloPix ASIC aims to propose a method to quantify this effect for further investigation of the impact on its performance.\n",
     "\n",
-    "### 1.1     VeloPix\n",
+    "### A.    VeloPix\n",
     "\n",
-    "Table 1 shows the specifications of VeloPix.  As the chip operates with a clock of 40 MHz, hits will be recorded with a precision of 25 ns. One orbit of the LHC is 3564 clock cycles or bunch crossings, and a 9-bit timestamp is used to identify each cycle. In this note, this timestamp will be referred to as BXID (bunch-crossing identification number).\n",
+    "Table 1 shows the specifications of VeloPix.  As the chip operates with a clock of 40 MHz, hits will be recorded with a precision of 25 ns. One orbit of the LHC is 3564 clock cycles or bunch crossings, and a 9-bit timestamp is used to identify each cycle. In this note, this timestamp will be referred to as BXID (bunch-crossing identification number) [1].\n",
     "\n",
-    "The front-end of VeloPix including is shown in Figure 1. There is a functionality for test pulse injection which is digitally controlled. The expected detector capacitance C$_{det}$ is approximately 50 fF. With this feature, it is possible to inject different known amounts of charges into the pixel circuit by adjusting the TpA and TpB voltages applied to the capacitor. Then, the charge value is correlated with the digital readout value. The front-end also has a 4-bit DAC per pixel for threshold tuning.\n",
+    "The front-end of VeloPix including is shown in Figure 1. There is a functionality for test pulse injection which is digitally controlled. The expected detector capacitance C$_{det}$ is approximately 50 fF. With this feature, it is possible to inject different known amounts of charges into the pixel circuit by adjusting the TpA and TpB voltages applied to the capacitor. Then, the charge value is correlated with the digital readout value. The front-end also has a 4-bit DAC per pixel for threshold tuning [4].\n",
     "\n",
     "\n",
     "|                               |                                                                              |\n",
@@ -35,25 +35,25 @@
     "             \n",
     "<img src=\"../deliver/images/front_end_diagram.png\" width=\"600\">\n",
     "\n",
-    "<center>Figure 1: A schematic of the front-end of VeloPix [3].</center>\n",
+    "<center>Figure 1: A schematic of the front-end of VeloPix [7].</center>\n",
     "\n",
-    "### 1.2      Timewalk\n",
+    "### B.      Timewalk\n",
     "\n",
-    "As can be seen from Figure 2, the signal takes some time to reach the threshold.  The discriminator will detect the signal later than the actual arrival time of the hit on the chip.  This delay is called timewalk and depends on the signal amplitude. Timewalk leads to incoherence in the measurement of the z-position of a hit, which expresses as an error in the vertex tracking.\n",
+    "As can be seen from Figure 2, the signal takes some time to reach the threshold [5].  The discriminator will detect the signal later than the actual arrival time of the hit on the chip.  This delay is called timewalk and depends on the signal amplitude. Timewalk leads to incoherence in the measurement of the z-position of a hit, which expresses as an error in the vertex tracking.\n",
     "\n",
     "<img src=\"../deliver/images/timewalk_illustration.png\" width=\"600\">\n",
     "\n",
     "<center>Figure 2: A schematic of the timewalk effect: Pulses of different amplitudes in the preamplifier cross the threshold level at different times. Hence, smaller amplitude signals take longer to detect.</center>\n",
     "\n",
-    "## 2      Experimental Setup and Materials\n",
+    "## II.      Experimental Setup and Materials\n",
     "\n",
-    "To exercise the capability of the chip, it was developed a compact readout system called Speedy PIxel Detector Readout (SPIDR) [3][5]. The SPIDR system consists of a Xilinx VC707 FPGA board with various communication interfaces, firmware, CPU subsystem, and an API library. The main read-out board connects to both 10 Gb Ethernet and 1 Gb Ethernet devices.  \n",
+    "To exercise the capability of the chip, it was developed a compact readout system called Speedy PIxel Detector Readout (SPIDR) [7][6]. The SPIDR system consists of a Xilinx VC707 FPGA board with various communication interfaces, firmware, CPU subsystem, and an API library. The main read-out board connects to both 10 Gb Ethernet and 1 Gb Ethernet devices.  \n",
     "\n",
     "<img src=\"../deliver/images/experimental_setup.jpeg\" width=\"600\">\n",
     "\n",
     "<center>Figure 3:  Chip carrier board without ASICs connected to the main SPIDR board.</center>\n",
     "\n",
-    "### 2.1       Method\n",
+    "### A.       Method\n",
     "\n",
     "As mentioned before, in the analog part of the pixel there is also a charge injection circuit called Test Pulses. By varying the voltages of the test pulse it is possible to simulate the charges generated by particles with different energies going through the sensor. \n",
     "\n",
@@ -94,12 +94,13 @@
     "\n",
     "\n",
     "   \n",
-    "## 3      Analysis and Results\n",
+    "## III.      Analysis and Results\n",
+    "The analysis presented in this work was performed in ROOT C++ (version\n",
+    "6.10/04) in a Jupyter notebook environment (version 6.0.3) and is openly\n",
+    "available at https://github.com/larissahmendes/timewalk [2]. Although the code with the method presented in section II-A to generate the data is not available to reproduce, the raw data and pre-processing code are available at https://zenodo.org/record/3893290#.Xvd4ARh7nCK [2].\n",
+    "Each pixel of the sensor has its circuit (see Figure 1), therefore the analysis is done pixel by pixel. We divide its 25 ns clock into 16 phases of 1.5 ns. Varying the phase, we can delay the entry of the pulse to see the moment when it changes the Bunch Crossing counter (BXID).\n",
+    "Figure 5 shows this behavior for one $\\mathrm{\\Delta VTP}$ and one pixel only.\n",
     "\n",
-    "The analysis presented in this work was performed in ROOT C++ (version 6.10/04) in a Jupyter notebook environment (version 6.0.3) and is openly available at https://github.com/larissahmendes/timewalk. Although the code to generate the code is not available to reproduce, the raw data and pre-processing code are available at (ZENODO LINK).\n",
-    "\n",
-    "Each pixel of the sensor has its circuit (see Figure 1), therefore the analysis is done pixel by pixel. We divide its 25 ns clock into 16 phases of 1.5 ns. Varying the phase, we can delay the entry of the pulse to see the moment when it changes the Bunch Crossing counter (BXID). Figure 5 shows this behavior for one $\\mathrm{\\Delta VTP}$ and one pixel only. \n",
-    "  \n",
     "<img src=\"../deliver/images/bxid_vs_phase.png\" width=\"300\">\n",
     "\n",
     "<center>Figure 5: Phase vs BXID behavior for pixel in position 0x0 (row x column)</center>\n",
@@ -147,7 +148,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OBJ: TH2F\thtwAllperpix_r0_c0\tPixel (0,0) - Negative #Delta VTP : 0 at: 0x7fb4894a6ca0\n"
+      "OBJ: TH2F\thtwAllperpix_r0_c0\tPixel (0,0) - Negative #Delta VTP : 0 at: 0x7fee4d4a39d0\n"
      ]
     },
     {
@@ -321,7 +322,9 @@
    "source": [
     "<img src=\"../deliver/images/delay_multiple_vtp_with_edges.png\" width=\"600\">\n",
     "\n",
-    "<center>Figure 8: \"step-like\" histogram representing the projection of the previous histogram at the $\\mathrm{\\Delta VTP}$ value of 113. The points of the histograms that crosses the illustrative red line are the edges of the first histograms from this specific $\\mathrm{\\Delta VTP}$ value.  </center>\n",
+    "<center>Figure 8: \"step-like\" histogram representing the projection of the previous histogram at the $\\mathrm{\\Delta VTP}$ value of 113. The points of the histograms that crosses the illustrative red line are the\n",
+    "edges of the first histograms from this specific $\\mathrm{\\Delta VTP}$ value.\n",
+    "</center>\n",
     "\n",
     "The first point that the histogram intercepts the line is being called \"Lower edge\", the second interception point is called \"Upper edge\". The middle point, taking the middle distance between them, is called \"Average point\".\n",
     "\n",
@@ -359,6 +362,7 @@
     "******************************************************************************************************************/\n",
     "\n",
     "TCanvas *canvas3 = new TCanvas(\"canvas\",\"canvas\",800,600);\n",
+    "canvas3->cd();\n",
     "TFile *inputfile2= TFile::Open(\"../results/htwInterpPix_demonstration.root\"); // this input is a demonstration to leave on the GitHub repository\n",
     "\n",
     "// Get histograms from input file\n",
@@ -413,7 +417,7 @@
     "<img src=\"../deliver/images/low_edge_fit_0x0.png\" width=\"700\">\n",
     "<center>Figure 10: Fit for pixel 0x0. This plot is an output from TW_fits.ipynb notebook. To understand the workflow, see https://github.com/larissahmendes/timewalk/blob//workflow/workflow_planning.png</center>\n",
     "\n",
-    "Doing this for all pixels in the matrix we see the parameters values for all pixels. \n",
+    "Doing this for all pixels in the matrix we see the parameters values for all pixels (see Figure 11).\n",
     "\n",
     "<img src=\"../deliver/images/parameters_histogram.png\" width=\"700\">\n",
     "\n",
@@ -426,37 +430,55 @@
    "source": [
     "Now, we can use this result to calculate the minimum charge necessary to detect a collision in the right event/BXID.\n",
     "\n",
-    "Since the function has a horizontal asymptote (Figure 10), the heigh of this asymptote corresponds to the time of an infinite $\\mathrm{\\Delta VTP}$ (or charge, considering a real particle hit). Figure 3 shows that the higher the signal amplitude, the earlier it is detected. Therefore, an infinite signal would be the first one to be detected. In this case, we are considering the value of parameter p3 to be an approximation to the time delay of this infinite signal.\n",
+    "Since the function has a horizontal asymptote (Figure 10), the heigh of this asymptote corresponds to the time of an infinite $\\mathrm{\\Delta VTP}$ (or charge, considering a real particle hit). Figure 2 shows that the higher the signal amplitude, the earlier it is detected. Therefore, an infinite signal would be the first one to be detected. In this case, we are considering the value of parameter p3 to be an approximation to the time delay of this infinite signal.\n",
     "\n",
-    "We can now finally look for the minimum $\\mathrm{\\Delta VTP}$ that makes the difference between its delay and parameter p3 less than 25 ns, which is the time resolution of VeloPix. We will call this the minimal in-time $\\mathrm{\\Delta VTP}$.\n",
+    "We can now finally look for the minimum $\\mathrm{\\Delta VTP}$ that makes the difference between its delay and parameter p3 less than 25 ns, which is the time resolution of VeloPix. We will call this the minimal in-time \\$\\mathrm{\\Delta VTP}$.\n",
     "\n",
     "<img src=\"../deliver/images/minimum_vtp_distribution.png\" width=\"700\">\n",
     "\n",
     "<center>Figure 12: Minimal in-time $\\mathrm{\\Delta VTP}$. This plot is an output from TW_hists.ipynb notebook.To understand the workflow, see https://github.com/larissahmendes/timewalk/blob//workflow/workflow_planning.png</center>\n",
     "\n",
-    "We are working with a charge simulation using the input voltage $\\mathrm{\\Delta VTP}$, but as shown in section 2.1, the corresponding charge could be easily calculated.\n",
+    "We are working with a charge simulation using the input voltage $\\mathrm{\\Delta VTP}$, but as shown in section II.A, the corresponding charge could be easily calculated.\n",
     "\n",
     "From the histogram in Figure 12, we can find a global value of $\\mathrm{\\Delta VTP}$ of almost 18 ns. This means that detecting a signal with amplitude greater than this value, the chances are that this pulse will be counted only in the next event. \n",
     "\n",
-    "## 3    Conclusion\n",
+    "## IV.    Conclusion\n",
     "\n",
     "In total, VELO consists of 52 modules positioned in vacuum along the LHC beampipe, surrounding the interaction point, summing 624 VeloPix ASICs. This paper proposes a method to quantify the Timewalk effect on the VeloPix ASIC.\n",
     "\n",
-    "What Figure 15 shows is the minimum charge required to have a particle hit associated with the same event of higher charges. At the VELO, if a particle from a certain collision with a charge is less than the minimum calculated for that chip, this hit will not be identified that same collision, but the next one. Since the value of this minimum charge can be calculated pixel by pixel, this value can be recorded so that any hit in that pixel with a smaller amplitude can be ignored so that it is not correlated to the wrong event.\n",
+    "What Figure 15 shows is the minimum charge required to have a particle hit associated with the same event of higher charges. At the VELO, if a  particle from a certain collision with a charge is less than the minimum calculated for that chip, this hit will not be identified that same collision, but the next one. Since the value of this minimum charge can be calculated pixel by pixel, this value can be recorded so that any hit in that pixel with a smaller amplitude can be ignored so that it is not correlated to the wrong event.\n",
     "\n",
-    "The analysis of this work can be used as a basis for further investigations on the subject, and as this ASIC is derived from the Medipix family, this study can be adapted to other chips as well. \n",
+    "The analysis of this work can be used as a basis for further\n",
+    "investigations on the subject, and as this ASIC is derived from the Medipix family, this study can be adapted to other chips as well.\n",
     "\n",
     "## References\n",
     "\n",
-    "[1] Y Fu, C Brezina, K Desch, T Poikela, X Llopart, M Campbell, D Massimiliano, V Gro-mov, R Kluit, M van Beauzekom, F Zappon, and V Zivkovic.  The charge pump PLLclock  generator  designed  for  the  1.56  ns  bin  size  time-to-digital  converter  pixel  arrayof the timepix3 readout ASIC.Journal of Instrumentation, 9(01):C01052–C01052, jan2014.\n",
+    "[1] Y Fu, C Brezina, K Desch, T Poikela, X Llopart, M Campbell, D Massim-\n",
+    "iliano, V Gromov, R Kluit, M van Beauzekom, F Zappon, and V Zivkovic.\n",
+    "The charge pump PLL clock generator designed for the 1.56 ns bin\n",
+    "size time-to-digital converter pixel array of the timepix3 readout ASIC.\n",
+    "Journal of Instrumentation, 9(01):C01052–C01052, jan 2014.\n",
     "\n",
-    "[2]  Tuomas Sakari Poikela. Readout Architecture for Hybrid Pixel Readout Chips, Apr 2015.Presented 15 Jun 2015.\n",
+    "[2] Mendes Larissa Helena. Timewalk measurements in the velopix asic.\n",
+    "https://github.com/larissahmendes/timewalk, 2020.\n",
     "\n",
-    "[3]  J Visser, M van Beuzekom, Henk Boterenbrood, B van der Heijden, J I Mu ̃noz, S Kulis,B Munneke, and F Schreuder.  SPIDR: a read-out system for Medipix3 amp; Timepix3.JINST, 10(12):C12028, 2015.13\n",
+    "[3] Larissa Helena Mendes. Velopix timewalk dataset.https://doi.org/10.5281/zenodo.3893290, June 2020\n",
     "\n",
-    "[4]  Mijke Schut.  Characterisation of the Timepix3 chipusing a gaseous detector, Feb 2015.\n",
+    "[4] T. Poikela, M. De Gaspari, J. Plosila, T. Westerlund, R. Ballabriga,\n",
+    "J. Buytaert, M. Campbell, X. Llopart, K. Wyllie, V. Gromov, M. van\n",
+    "Beuzekom, and V. Zivkovic. VeloPix: the pixel ASIC for the LHCb\n",
+    "upgrade. Journal of Instrumentation, 10(01):C01057–C01057, jan 2015.\n",
     "\n",
-    "[5]  B. van der Heijden, J. Visser, M. van Beuzekom, H. Boterenbrood, S. Kulis, B. Munneke,and F. Schreuder.  SPIDR, a general-purpose readout system for pixel ASICs.JINST,12(02):C02040, 2017.\n",
+    "[5] Mijke Schut. Characterisation of the Timepix3 chipusing a gaseous\n",
+    "detector, Feb 2015.\n",
+    "\n",
+    "[6] B. van der Heijden, J. Visser, M. van Beuzekom, H. Boterenbrood,\n",
+    "S. Kulis, B. Munneke, and F. Schreuder. SPIDR, a general-purpose\n",
+    "readout system for pixel ASICs. JINST, 12(02):C02040, 2017.\n",
+    "\n",
+    "[7] J Visser, M van Beuzekom, Henk Boterenbrood, B van der Heijden, J I\n",
+    "Muñoz, S Kulis, B Munneke, and F Schreuder. SPIDR: a read-out system\n",
+    "for Medipix3 amp; Timepix3. JINST, 10(12):C12028, 2015.\n",
     "\n"
    ]
   }
