--- a/code/TW_interpolation.ipynb
+++ b/code/TW_interpolation.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Function to fing the edge point by interpolation\n",
+    "// Function to find the edge point by interpolation\n",
     "double  interpolateTimewalk( TH1D* htw, int Npointsperbin, double &crossingphaseup, double &crossingphasedown){\n",
     "\n",
     "    TString name  = \"\"; name+=htw->GetName(); name+=+\"_int\";\n",
@@ -67,19 +67,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This code performs the analysis demonstrated in Figures 7 and 8 do paper. The output is a .root file were the histograms are stored. This notebook will not plot any of them, as the number of histograms can be too big.\n",
+    "This code performs the analysis demonstrated in Figures 7 and 8 of the paper. The output is a .root file were the histograms are stored. This notebook will not plot any of them, as the number of histograms can be too big.\n",
     "\n",
     "It swipes through the 256 x 256 pixel matrix, but to reduce the size of the set, this version is jumping every 16 rows and 16 columns at\n",
     "\n",
-    "`for(int irow=0; irow<256; irow+=16){    \n",
-    "    for(int icol=0; icol<256; icol+=16){`\n",
+    "`for(int irow=0; irow<256; irow+=row_step){    \n",
+    "    for(int icol=0; icol<256; icol+=col_step){`\n",
     "    \n",
-    "To increase or decrease the number of pixels analyzed, just change the argument of this loop. But be aware that analysing the entire pixel matrix can take a lot of RAM memory and the notebook can crash.\n"
+    "To increase or decrease the number of pixels analyzed, just change the variables `row_step` and `col_step`. But be aware that analysing the entire pixel matrix can take a lot of RAM memory and the notebook might crash.\n",
+    "\n",
+    "For this set of 256 pixels analysed (step 16), this code can take about 1:30 to run. \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int row_step = 16;\n",
+    "int col_step = 16;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -116,8 +128,8 @@
     "// It can be done for all 256 row and 256 columns of the matrix, just change the loop to irow++/icol++. \n",
     "// Be aware that analyse the entire pixel matrix can take a lot of RAM memory and the notebook can crash\n",
     "\n",
-    "for(int irow=0; irow<256; irow+=16){     // sweep through rows of the pixel array -> CHANGE TO ANALYSE MORE/LESS PIXELS\n",
-    "    for(int icol=0; icol<256; icol+=16){ // sweep through columns of the pixel array -> CHANGE TO ANALYSE MORE/LESS PIXELS\n",
+    "for(int irow=0; irow<256; irow+=row_step){     // sweep through rows of the pixel array -> CHANGE TO ANALYSE MORE/LESS PIXELS\n",
+    "    for(int icol=0; icol<256; icol+=col_step){ // sweep through columns of the pixel array -> CHANGE TO ANALYSE MORE/LESS PIXELS\n",
     "\n",
     "        // Declaring new histograms\n",
     "        TH1F *hlowEdge=NULL, *haverageEdge=NULL, *hhighEdge=NULL;\n",
